--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,13 @@
+
+#              ██   ██                               ████ ██
+#       █████ ░░   ░██                              ░██░ ░░   █████
+#      ██░░░██ ██ ██████  █████   ██████  ███████  ██████ ██ ██░░░██
+#     ░██  ░██░██░░░██░  ██░░░██ ██░░░░██░░██░░░██░░░██░ ░██░██  ░██
+#     ░░██████░██  ░██  ░██  ░░ ░██   ░██ ░██  ░██  ░██  ░██░░██████
+#   ██ ░░░░░██░██  ░██  ░██   ██░██   ░██ ░██  ░██  ░██  ░██ ░░░░░██
+#  ░██  █████ ░██  ░░██ ░░█████ ░░██████  ███  ░██  ░██  ░██  █████
+#  ░░  ░░░░░  ░░    ░░   ░░░░░   ░░░░░░  ░░░   ░░   ░░   ░░  ░░░░░
+
 [user]
     name = N. Escobar
     email = nick@nescobar.media
@@ -57,7 +67,6 @@
     l = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
     p = push
     pf = push --force
-    st = status
+    s = status -s
     unstage = reset --hard HEAD
     aa = add --all
-
