--- a/config/neofetch/config.conf
+++ b/config/neofetch/config.conf
@@ -6,19 +6,55 @@
 # Customization Wiki https://github.com/dylanaraps/neofetch/wiki/Customizing-Info
 
 print_info() {
+
+    modl=$(info "" model)
+    gpus=$(info "" gpu)
+    cpus=$(info "" cpu)
+    rams=$(info "" memory)
+    #gpus=" [38;5;15m [1mApple M1 Max (10) [0m "
+    #cpus=" [38;5;15m [1mApple M1 Max [0m "
+    #rams=" [38;5;15m [1m0 [0m "
+
+    mlen=$((${#modl}-19))
+    glen=$((${#gpus}-19))
+    clen=$((${#cpus}-19))
+    rlen=$((${#rams}-19))
+
+    ar=($mlen $glen $clen $rlen)
+    max=1
+    for v in ${ar[@]}; do
+      if (( $v > $max )); then max=$v; fi;
+    done
+    max=$((${max}+13))
+
+    titl="${USER}@$(hostname)"
+    top="┌─ $titl "
+    bottom="└"
+
+    len=${#titl}
+    tmax=$((${max}-3-$len))
+    bmax=$max
+
+
+    for (( i=0; i <= $tmax; ++i )); do top="${top}─"; done
+    for (( i=0; i <= $bmax; ++i )); do bottom="${bottom}─"; done
+
     prin " "
 
-    #prin "$(color 7)\n \n \n ┌─ ${USER}@${HOST%%.*} ────────────────────────────────┐"
+    #prin "$(color 7)\n \n \n ┌─ ${USER}@$(hostname) ────────────────────────────────┐"
     #prin "$(color 7)\n \n \n ├──────────────────────────────────────────────────────┤"
+    #prin "$(color 7)\n \n \n ┌─ ${USER}@$(hostname) ──────────────────────┐"
 
-    prin "$(color 7)\n \n \n ┌─ nickesc@Batcomputer ────────────────────────────────┐"
-    prin "$(color 7)\n \n \n \n \n Hardware:"
+    prin "$(color 7)\n \n \n ${top}─┐"
+    prin "$(color 4)\n \n \n \n \n Hardware:"
     info "$(color 1)\n \n \n \n \n \n \n model\n \n " model
     info "$(color 1)\n \n \n \n \n \n \n cpu\n \n \n \n " cpu
     info "$(color 1)\n \n \n \n \n \n \n gpu\n \n \n \n " gpu
+    #prin "$(color 1)\n \n \n \n \n \n \n cpu\n \n \n \n \n \n $(color 7)Apple M1 Max (10)"
+    #prin "$(color 1)\n \n \n \n \n \n \n gpu\n \n \n \n \n \n $(color 7)Apple M1 Max"
     info "$(color 1)\n \n \n \n \n \n \n mem\n \n \n \n " memory
     info "$(color 1)\n \n \n \n \n \n \n disk\n \n \n " disk
-    prin "$(color 7)\n \n \n \n \n Software:"
+    prin "$(color 4)\n \n \n \n \n Software:"
     info "$(color 1)\n \n \n \n \n \n \n os\n \n \n \n \n " distro
     info "$(color 1)\n \n \n \n \n \n \n kernel\n " kernel
     info "$(color 1)\n \n \n \n \n \n \n uptime\n " uptime
@@ -26,11 +62,9 @@ print_info() {
     info "$(color 1)\n \n \n \n \n \n \n term\n \n \n " term
     info "$(color 1)\n \n \n \n \n \n \n pkgs\n \n \n " packages
     prin ""
-    prin "$(color 1)\n \n \n \n \n \n \n ● $(color 2)\n \n \n ● $(color 3)\n \n \n ● $(color 4)\n \n \n ● $(color 5)\n \n \n ● $(color 6)\n \n \n ● $(color 7)\n \n \n ● $(color 8)\n \n \n ●"
-    prin "$(color 7)\n \n \n └──────────────────────────────────────────────────────┘"
-    prin ""
-    prin "\n \n \n  "
-    prin ""
+    prin "$(color 1)\n \n \n \n \n \n \n ██$(color 2)██$(color 3)██$(color 4)██$(color 5)██$(color 6)██$(color 7)██$(color 8)██"
+    #prin "$(color 7)\n \n \n └────────────────────────────────────────────┘"
+    prin "$(color 7)\n \n \n ${bottom}─┘"
 
 }
 
@@ -207,7 +241,7 @@ cpu_brand="on"
 # Example:
 # on:  'Intel i7-6500U (4) @ 3.1GHz'
 # off: 'Intel i7-6500U (4)'
-cpu_speed="on"
+cpu_speed="off"
 
 # CPU Cores
 # Display CPU cores in output
@@ -221,7 +255,7 @@ cpu_speed="on"
 # logical:  'Intel i7-6500U (4) @ 3.1GHz' (All virtual cores)
 # physical: 'Intel i7-6500U (2) @ 3.1GHz' (All physical cores)
 # off:      'Intel i7-6500U @ 3.1GHz'
-cpu_cores="physical"
+cpu_cores="on"
 
 # CPU Temperature
 # Hide/Show CPU temperature.
@@ -503,9 +537,9 @@ mpc_args=()
 # this order: 'title', '@', 'underline', 'subtitle', 'colon', 'info'
 #
 # Example:
-# colors=(distro)      - Text is colored based on Distro colors.
+#colors=(distro)      # Text is colored based on Distro colors.
 # colors=(4 6 1 8 8 6) - Text is colored in the order above.
-colors=(1 2 3 4 5 15 7 8)
+colors=(1 2 3 4 5 15)
 
 
 ##--------- Text Options
