fully checked, ready to go

--- a/config/.npmrc
+++ b/config/.npmrc
@@ -8,10 +8,9 @@
 #  ░░ ░░░   ░░ ░░      ░░░  ░░  ░░ ░░░     ░░░░░
 
 
-init.author.name=N. Escobar/nickesc
-init.author.email=nickesc.media@gmail.com
-init.author.url=https://nickesc.com/
+init.author.name=N. Escobar
+init.author.email=nick@nescobar.media
+init.author.url=https://nickesc.github.io/
 init.license=MIT
-init.version=1.0.0
-init.version "0.0.1"
+init.version=0.0.1
 loglevel="warn"
