--- a/notes/workspace
+++ b/notes/workspace
@@ -64,7 +64,7 @@ Workspace Tree:
     │   │   └── ...
     │   ├── Articles/
     │   │   └── ...
-    │   ├── Blog/
+    │   ├── Spiral/
     │   │   └── ...
     │   └── ...
     ├── Notes/
