a few updates and improvements

--- a/config/.npmrc
+++ b/config/.npmrc
@@ -8,9 +8,9 @@
 #  ░░ ░░░   ░░ ░░      ░░░  ░░  ░░ ░░░     ░░░░░
 
 
-init.author.name=N. Escobar
-init.author.email=nick@nescobar.media
-init.author.url=https://nickesc.github.io/
-init.license=MIT
-init.version=0.0.1
-loglevel="warn"
+init-author-name=N. Escobar
+init-author-email=nick@nescobar.media
+init-author-url=https://nickesc.github.io/
+init-license=MIT
+init-version=0.0.1
+loglevel=warn
