moved packages from setup file to brewfile

--- a/packages/Brewfile
+++ b/packages/Brewfile
@@ -26,6 +26,9 @@ brew "moreutils"
 brew "findutils"
 brew "gnupg"
 brew "cmake"
+brew "vim"
+brew "imagemagick"
+brew "gnu-sed"
 
 # Install more recent versions of some macOS tools.
 brew "grep"
